# rustml

./: .gitignore  Cargo.toml  README.md
examples/: linear_regression.rs  logistic_regression.rs  ridge_regression.rs
src/models/: mod.rs
src/models/linear/: linear_regression.rs  logistic_regression.rs  mod.rs  ridge_regression.rs
src/models/linear/tests/: linear_regression_test.rs  logistic_regression_test.rs  mod.rs  ridge_regression_test.rs
